[project]
name = "pycco"
version = "0.1.0"
description = "A toy C compiler in pure Python"
authors = [
    {name = "circargs",email = "nick@ouellet.dev"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pre-commit = "^4.0.1"
pytest-cov = "^6.0.0"
jupyter = "^1.1.1"

